# diskmop

./: .gitignore  README.md  pyproject.toml
diskmop/: __main__.py  cli.py  report.py  scanner.py
