[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diskmop"
version = "0.1.0"
description = "Scan a directory tree and generate an interactive HTML disk usage report."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
keywords = ["disk", "report", "filesystem", "html", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Filesystems",
  "Topic :: Utilities",
]

[project.scripts]
diskmop = "diskmop.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["diskmop*"]
